--- a/pls-selenium/.classpath
+++ b/pls-selenium/.classpath
@@ -32,5 +32,29 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/test/resources/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/owm-japis-2.5.0.3.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/aopalliance-repackaged-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/asm-debug-all-5.0.4.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/hk2-api-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/hk2-locator-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/hk2-utils-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/javax.inject-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-client.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-common.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-guava-2.23.2.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/jersey-server.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="src/test/resources/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
