--- a/pls-selenium/pom.xml
+++ b/pls-selenium/pom.xml
@@ -11,10 +11,27 @@
         <version>3.0.0-beta3</version>
     </dependency>  
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+      	<version>4.11</version>
+      	<scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>com.sun.jersey</groupId>
+		<artifactId>jersey-server</artifactId>
+		<version>1.8</version>
+	</dependency>
+	<dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-client</artifactId>
+        <version>2.23.1</version>
+        <scope>provided</scope>
+    </dependency>
+	<dependency>
+	    <groupId>javax</groupId>
+	    <artifactId>javaee-web-api</artifactId>
+	    <version>6.0</version>
+	    <scope>provided</scope>
+</dependency>
    </dependencies>
 </project>
